cdn links updated

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>JavaScriptImageSlider</title>
-		<link rel="stylesheet" href="fontawesome/css/all.min.css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
@@ -24,7 +24,7 @@
 				<div class="dot dot5"></div>
 			</div>
 		</div>
-		<script src="fontawesome/js/all.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"></script>
 		<script src="app.js"></script>
 	</body>
 </html>
